--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "homepage",
   "version": "1.0.0",
   "description": "Personal homepage",
-  "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "gulp": "^4.0.1",
-    "less": "^3.9.0",
-    "less-plugin-autoprefix": "^2.0.0",
-    "less-plugin-clean-css": "^1.5.1"
-  },
-  "scripts": {
-    "build": "gulp",
-    "watch": "gulp watch",
-    "clean": "gulp clean"
-  },
+  "main": "src/index.html",
   "author": "João Pinheiro",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "lessc --verbose --source-map-map-inline --clean-css src/style.less src/style.css",
+    "watch": "npm-watch build",
+    "serve": "browser-sync start --config bs-config.js",
+    "start": "run-p watch serve"
+  },
+  "watch": {
+    "build": {
+      "patterns": "src/style.less"
+    }
+  },
+  "dependencies": {
+    "less": "4.1.1",
+    "less-plugin-clean-css": "1.5.1"
+  },
+  "devDependencies": {
+    "browser-sync": "2.26.14",
+    "npm-run-all": "4.1.5",
+    "npm-watch": "0.9.0"
+  }
 }
