--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
 services:
-  homepage:
-    build: .
-    image: homepage
+  http:
+    build: http
+    image: docker.io/pineman/homepage-http:1.0.0
+    environment:
+      HP_DB_HOST: "homepage_db_1"
     volumes:
     - type: bind
-      source: ./src
+      source: ./http/build
       target: /var/www/html
     ports:
     - "80:80"
+    depends_on:
+    - db
+  db:
+    build: db
+    image: docker.io/pineman/homepage-db:1.0.0
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+    - "5432:5432"
