--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "João Pinheiro",
   "license": "MIT",
   "scripts": {
-    "build": "lessc --verbose --source-map-map-inline --clean-css src/style.less http/build/style.css",
+    "build": "./build.sh",
     "watch": "npm-watch build",
     "serve": "browser-sync start --config bs-config.js",
     "start": "run-p watch serve"
@@ -16,11 +16,9 @@
       "patterns": "src/style.less"
     }
   },
-  "dependencies": {
-    "less": "4.1.1",
-    "less-plugin-clean-css": "1.5.1"
-  },
   "devDependencies": {
+    "less": "4.1.1",
+    "less-plugin-clean-css": "1.5.1",
     "browser-sync": "2.26.14",
     "npm-run-all": "4.1.5",
     "npm-watch": "0.9.0"
