--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     }
   },
   "devDependencies": {
-    "less": "4.1.1",
+    "npm-upgrade": "^3.1.0",
+    "browser-sync": "2.27.9",
+    "less": "4.1.2",
     "less-plugin-clean-css": "1.5.1",
-    "browser-sync": "2.26.14",
     "npm-run-all": "4.1.5",
-    "npm-watch": "0.9.0"
+    "npm-watch": "0.11.0"
   }
 }
