--- a/cv/package.json
+++ b/cv/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "pdf": "./make"
   },
+  "type": "module",
   "devDependencies": {
-    "electron-pdf": "^20.0.0"
+    "electron-pdf": "^20.0.0",
+    "pdf-lib": "^1.17.1"
   }
 }
